--- a/RetrofitTest/app/build.gradle
+++ b/RetrofitTest/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.Spikeysanju:MotionToast:1.3.3.4'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
