--- a/RetrofitTest/app/build.gradle
+++ b/RetrofitTest/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     def fragment_version = "1.2.5"
     def lifecycle_version = "2.2.0"
+    def room_version = "2.2.6"
 
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation "androidx.fragment:fragment:$fragment_version"
@@ -47,8 +48,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:30.0.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -57,7 +56,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.Spikeysanju:MotionToast:1.3.3.4'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
 }
