--- a/RoomTest/app/src/main/AndroidManifest.xml
+++ b/RoomTest/app/src/main/AndroidManifest.xml
@@ -9,15 +9,20 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainPage">
+        android:supportsRtl="true">
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.CrudRetrofit.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainPage"
+            android:theme="@style/Theme.AppCompat"/>
     </application>
 
 </manifest>
